--- a/CALCULATOR/calculator.html
+++ b/CALCULATOR/calculator.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
 
-            <a class="navbar-brand" href="/main/index.html">Логотип</a> 
+            <a class="navbar-brand" href="/main/index.html">MCK-Reliable</a> 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
